--- a/home.html
+++ b/home.html
@@ -30,42 +30,46 @@
             <div class="mtl">
                 <h1>About Us</h1>
                 <p class="mtlp">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe praesentium doloribus dolore maiores necessitatibus, dolor nemo, autem commodi reiciendis sit, optio officia facere at quia quisquam dicta! Quos deleniti natus enim minus laboriosam fuga dicta quis quam perspiciatis fugiat ipsa, distinctio possimus fugit reiciendis est incidunt repellat iure nihil. Dolore.
-                </p>
+                    Welcome to SPORTeazz – Where Sports Meet Fun and Wellness!
+At SPORTeazz, we are passionate about helping you live your best, healthiest, and most active life. Our platform is designed to be your ultimate companion for all things sports – from personalized diet and exercise tracking to exciting quizzes that keep the fun alive.
+
+Explore our merchandise section to gear up with the coolest sportswear and accessories. Whether you're an athlete, a fitness enthusiast, or just someone looking for a bit of fun and motivation, we’ve got something for everyone.
+
+Join us in embracing a healthier, more active lifestyle – because sports aren’t just a game; they’re a way of life!
             </div>
         </div>
 
         <div class="midmid">
             
             <h1>Page Description</h1>
-            <!-- <p class="desc" id="desfirst">Calender</p>
-            <p class="desc" id="dessecond">Nutrition Tracker</p>
+            <!-- <p class="desc" id="desfirst">Nutrition Tracker </p>
+            <p class="desc" id="dessecond">Sports </p>
             <p class="desc" id="desthird">Exercise</p>
             <p class="desc" id="desfourth">Quiz</p>
-            <p class="desc" id="desfifth">Merchandise</p> -->
+            <p class="desc" id="desfifth">Shop</p> -->
 
 
 
             <div class="faq-container">
                 <div class="faq-item">
-                    <div class="faq-question">Calender</div>
-                    <div class="faq-answer">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis sunt, magni nesciunt quas deleniti tempore quia vitae placeat hic cumque!</div>
+                    <div class="faq-question">Nutrition Tracker</div>
+                    <div class="faq-answer">Wondering what to cook with the ingredients you have? Just tell us the quantities, and we’ll provide you with a delicious recipe tailored to your inputs. Eat healthy, eat smart!</div>
                 </div>
                 <div class="faq-item">
-                    <div class="faq-question">Nutrition</div>
-                    <div class="faq-answer">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis recusandae animi, voluptatibus architecto voluptatum fuga dolor minima placeat consectetur dolorem.</div>
+                    <div class="faq-question">Sports</div>
+                    <div class="faq-answer">Select your favorite sport, and we’ll provide you with all the essential information you need—rules, history, tips, and more. Dive deeper into the world of sports!</div>
                 </div>
                 <div class="faq-item">
                     <div class="faq-question">Exercise</div>
-                    <div class="faq-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam assumenda numquam recusandae nihil repudiandae pariatur necessitatibus repellat nemo voluptatem aperiam?</div>
+                    <div class="faq-answer">Learn a variety of exercises tailored to your fitness goals. From beginner-friendly routines to advanced techniques, we’re here to guide you every step of the way.</div>
                 </div>
                 <div class="faq-item">
                     <div class="faq-question">Quiz</div>
-                    <div class="faq-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam assumenda numquam recusandae nihil repudiandae pariatur necessitatibus repellat nemo voluptatem aperiam?</div>
+                    <div class="faq-answer">Test your knowledge with our fun, sports-related quizzes. Answer all questions correctly and unlock exciting discounts on our merchandise section!</div>
                 </div>
                 <div class="faq-item">
                     <div class="faq-question">Merchandise</div>
-                    <div class="faq-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam assumenda numquam recusandae nihil repudiandae pariatur necessitatibus repellat nemo voluptatem aperiam?</div>
+                    <div class="faq-answer">Discover the ultimate sports gear in our shopping section. From clothing to accessories, grab everything you need to level up your sports journey.</div>
                 </div>
             </div>
         </div>
